2010-12-13 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: Added check in Combat_schedule::find_opponents to make party members be
		attacked while sleeping if there are no other viable targets. Fixes bug # 2961387.

2010-12-13 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Added missing check for stove in find_leftovers.
	*schedule.*: added comments
	*svn:ignore: added exconfig.dll to the trunk's ignore list

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*conf/Configuration.cc: Prevent wrong error messages about moving and copying the
		configuration file in Windows if home is the Exult folder.

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: A check was added for the ending of some schedules. Every hour the ending
		is called and this check will prevent some erratic behavior.

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Improved Automaton baking in Silver Seed.
		display_wares cost changed in SI (needed for Automaton).

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: The Moonshade Baker now displays goods. Removed accidental temporary flag.
		gamemgr\sigame.cc: Map patches were added to remove	the bread, dough, and flour in
		Moonshade that are on the wrong tables. Dev games are now excluded from	all the SI
		map patches.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Reverted baking to_table cost. Added missing else statement in to_table.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: I fixed a crash in the baking schedule state find_leftovers caused by the
		oven getting cached out.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: In baking schedule, clear_display and remove_food now use the new baked
		quality. I changed size() check to empty() for use_potion.
